fix cf7 layout issue on checkboxes

--- a/dev/scss/includes/_footer.scss
+++ b/dev/scss/includes/_footer.scss
@@ -62,6 +62,10 @@
   textarea.form-control{
     margin-top: 25px;
   }
+
+  span.wpcf7-list-item{
+    margin-left: 0;
+  }
 }
 
 .service-selection{
